tests/throw errors.txt
http://www.kristianstadsbladet.se/tt-ekonomi/drivmedelspriserna-fortsatt-upp/
'http://www.kristianstadsbladet.se/tt-ekonomi/drivmedelspriserna-fortsatt-upp/'
UPDATE feed_history SET ? WHERE link = ?
OkPacket {
OkPacket {
events.js:141
      throw er; // Unhandled 'error' event
      ^

Error: Unexpected end
Line: 34
Column: 219
Char:
    at error (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\sax\lib\sax.js:642:8)
    at end (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\sax\lib\sax.js:650:64)
    at Object.SAXParser.end (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\sax\lib\sax.js:149:24)
    at SAXStream.end (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\sax\lib\sax.js:234:16)
    at FeedParser._flush (C:\WebstormProjects\1dv430\node_modules\feedparser\main.js:1066:17)
    at FeedParser.<anonymous> (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\readable-stream\lib\_stream_transform.js:135:12)
    at FeedParser.g (events.js:260:16)
    at emitNone (events.js:72:20)
    at FeedParser.emit (events.js:166:7)
    at finishMaybe (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\readable-stream\lib\_stream_writable.js:371:12)
    at endWritable (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\readable-stream\lib\_stream_writable.js:378:3)
    at FeedParser.Writable.end (C:\WebstormProjects\1dv430\node_modules\feedparser\node_modules\readable-stream\lib\_stream_writable.js:356:5)
